--- a/css/navigation.css
+++ b/css/navigation.css
@@ -21,8 +21,8 @@ body {
 }
 
 .logo img {
-    width: 70px;
-    height: 56px;
+    width: 60px;
+    height: 46px;
     top: 109px;
     gap: 0px;
     opacity: 0px;
@@ -36,7 +36,17 @@ h1 {
     white-space: nowrap;
 }
 
-.nav-menu {
+.nav-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.nav-menu li::marker {
+    content: none;
+}
+
+.nav-menu ul {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,7 +54,7 @@ h1 {
     white-space: nowrap;
 }
 
-.nav-menu button {
+.nav-menu a {
     background-color: #06587C;
     color: #fff;
     border: none;
@@ -53,14 +63,11 @@ h1 {
     margin: 0 5px;
     cursor: pointer;
     font-size: 16px;
-}
-
-.nav-menu button {
+    text-decoration: none;
     width: 139px;
-    height: 38px;
 }
 
-button a {
+a {
     font-size: 16px;
     font-weight: 400;
     text-decoration: none;
@@ -73,7 +80,7 @@ button a {
 }
 
 .dropdown-presupuesto {
-    width: 243px;
+    width: 283px;
 }
 
 #facturas {
@@ -82,7 +89,7 @@ button a {
 }
 
 .dropdown-facturas {
-    width: 243px;
+    width: 283px;
 }
 
 #tablas-detalle {
@@ -91,7 +98,7 @@ button a {
 }
 
 .dropdown-tablas-detalle {
-    width: 301px;
+    width: 341px;
 }
 
 .dropdown {
@@ -100,7 +107,7 @@ button a {
     flex-direction: column;
 }
 
-.dropdown button{
+.dropdown a{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -117,7 +124,7 @@ button a {
     color: #000000;
 }
 
-.dropdown-content button {
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
