--- a/views/deferred-analysis.html
+++ b/views/deferred-analysis.html
@@ -1,3 +1,4 @@
+<div navigation="navigation"></div>
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Diferido disponible</h1>
