--- a/views/total-invoices.html
+++ b/views/total-invoices.html
@@ -1,3 +1,4 @@
+<div navigation="navigation"></div>
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Todas las facturas</h1>
