--- a/views/paid-invoices.html
+++ b/views/paid-invoices.html
@@ -9,4 +9,16 @@
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
   </div>
+  
+  <div class="global-view">
+    <div class="global-view__item1" id="qso_FehB"></div>
+    <div class="global-view__item2" id="qso_gVavu"></div>
+    <div class="global-view__item3" id="qso_gWfE"></div>
+    <div class="global-view__item4" id="qso_favqt"></div>
+    <div class="global-view__item5" id="qso_PSGDY"></div>
+    <div class="global-view__item6" id="qso_VPkjB"></div>
+    <div class="global-view__item7" id="qso_DGnATL"></div>
+    <div class="global-view__item8" id="qso_pmadS"></div>
+    <div class="global-view__item9" id="qso_JGLrph"></div>
+  </div>
 </main>
