--- a/views/pending-invoices.html
+++ b/views/pending-invoices.html
@@ -9,4 +9,15 @@
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
   </div>
+
+  <div class="global-view">
+    <div class="global-view__item1" id="qso_3f22b3fc-123f-4374-b3f6-32a9dded8edd"></div>
+    <div class="global-view__item2" id="qso_87fc8213-003b-404a-9abd-5631335d272e"></div>
+    <div class="global-view__item3" id="qso_dce1d7e9-e187-4e15-ac9e-227a5b425019"></div>
+    <div class="global-view__item4" id="qso_6f01f280-5b51-43d6-a431-58354c16987e"></div>
+    <div class="global-view__item5" id="qso_dcae4835-d691-472a-b277-6a4c608053ad"></div>
+    <div class="global-view__item6" id="qso_0b298aa6-d957-48f8-8496-6d33536d54fd"></div>
+    <div class="global-view__item7" id="qso_93c27e90-8cf4-4222-ac44-37ba80b9b946"></div>
+    <div class="global-view__item8" id="qso_ab0b5c1d-1acb-4331-a925-f2135aa358c0"></div>
+  </div>
 </main>
