--- a/views/budget-analysis.html
+++ b/views/budget-analysis.html
@@ -2,11 +2,33 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle presupuesto</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="budget-analysis">
+    <div class="budget-analysis__item1" id="qso_86ad78f7-ef8b-4c7b-bd1e-3566cfd22f40"></div>
+    <div class="budget-analysis__item2" id="qso_rUcJZkP"></div>
+    <div class="budget-analysis__item3" id="qso_ePJjNPc"></div>
+    <div class="budget-analysis__item4" id="qso_ZadC"></div>
+
+    <div class="budget-analysis__item5">
+      <div class="budget-analysis__item5__header">
+        <div class="budget-analysis__item5__header__left" id="qso_RZJhG"></div>
+        <div class="budget-analysis__item5__header__right" id="qso_UxPLa"></div>
+      </div>
+      <div class="budget-analysis__item5__body" id="qso_SqQZDkS"></div>
+    </div>
+
+    <div class="budget-analysis__item6">
+      <div class="budget-analysis__item6__header">
+        <div class="budget-analysis__item6__header__left" id="qso_zjpxpYy"></div>
+      </div>
+      <div class="budget-analysis__item6__body" id="qso_LZjJ"></div>
+    </div>
   </div>
 </main>
