--- a/views/components/navigation.html
+++ b/views/components/navigation.html
@@ -121,8 +121,20 @@
           <span class="filters__btn__text">Filtros</span>
           <img class="filters__btn__icon" src="./img/icons/arrow.svg" />
         </button>
-        <div class="filters__dropdown">
-          <div class="filters__dropdown__filters" id="qso_nvGqzF"></div>
+        <div class="filters__dropdown filters__dropdown--hidden">
+          <div class="filters__dropdown__filters" id="qso_xmCpNy"></div>
+          <div class="filters__dropdown__filters" id="qso_JZkhHjM"></div>
+          <div class="filters__dropdown__filters" id="qso_hfspP"></div>
+          <div class="filters__dropdown__filters" id="qso_CvCPsg"></div>
+          <div class="filters__dropdown__filters" id="qso_kLRLMrE"></div>
+          <div class="filters__dropdown__filters" id="qso_JUvWvm"></div>
+          <div class="filters__dropdown__filters" id="qso_fNQQq"></div>
+          <div class="filters__dropdown__filters" id="qso_PDezYFC"></div>
+          <div class="filters__dropdown__filters" id="qso_jfpyAmC"></div>
+          <div class="filters__dropdown__filters" id="qso_wvSR"></div>
+          <div class="filters__dropdown__filters" id="qso_yqWzd"></div>
+          <div class="filters__dropdown__filters" id="qso_PyeDBh"></div>
+          <div class="filters__dropdown__filters" id="qso_jkrDV"></div>
         </div>
       </div>
     </div>
