--- a/views/deferred-analysis.html
+++ b/views/deferred-analysis.html
@@ -2,11 +2,48 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Diferido disponible</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="deferred-analysis">
+    <div class="deferred-analysis__item1" id="qso_GSAVheY"></div>
+    <div class="deferred-analysis__item2" id="qso_FPPQKp"></div>
+    <div class="deferred-analysis__item3" id="qso_mpPmWM"></div>
+    <div class="deferred-analysis__item4" id="qso_pTxsnj"></div>
+    <div class="deferred-analysis__item5" id="qso_Xcm"></div>
+
+    <div class="deferred-analysis__item6">
+      <div class="deferred-analysis__item6__header">
+        <div class="deferred-analysis__item6__header__left" id="qso_fpRBK"></div>
+        <div class="deferred-analysis__item6__header__right" id="qso_pHbPXM"></div>
+      </div>
+      <div class="deferred-analysis__item6__body" id="qso_jfhMsRq"></div>
+    </div>
+
+    <div class="deferred-analysis__item7">
+      <div class="deferred-analysis__item7__header">
+        <div class="deferred-analysis__item7__header__left" id="qso_uSFDtX"></div>
+      </div>
+      <div class="deferred-analysis__item7__body" id="qso_ahab"></div>
+    </div>
+
+    <div class="deferred-analysis__item8">
+      <div class="deferred-analysis__item8__header">
+        <div class="deferred-analysis__item8__header__left" id="qso_nrexuH"></div>
+      </div>
+      <div class="deferred-analysis__item8__body" id="qso_MEZQxBQ"></div>
+    </div>
+
+    <div class="deferred-analysis__item9">
+      <div class="deferred-analysis__item9__header">
+        <div class="deferred-analysis__item9__header__left" id="qso_PCFgEav"></div>
+      </div>
+      <div class="deferred-analysis__item9__body" id="qso_Whky"></div>
+    </div>
   </div>
 </main>
