--- a/views/global-view.html
+++ b/views/global-view.html
@@ -2,7 +2,7 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Situación presupuestaria</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
@@ -11,14 +11,14 @@
   </div>
 
   <div class="global-view">
-    <div class="global-view__item1" id="qso_WjJkAFx"></div>
+    <div class="global-view__item1" id="qso_JKzAa"></div>
     <div class="global-view__item2" id="qso_PTjgjP"></div>
-    <div class="global-view__item3" id="qso_GHuNcN"></div>
-    <div class="global-view__item4" id="qso_bZTkSJ"></div>
-    <div class="global-view__item5" id="qso_kHxapT"></div>
-    <div class="global-view__item6" id="qso_VPkjB"></div>
+    <div class="global-view__item3" id="qso_DJabg"></div>
+    <div class="global-view__item4" id="qso_cjkttbD"></div>
+    <div class="global-view__item5" id="qso_YgybNG"></div>
+    <div class="global-view__item6" id="qso_PjjQuf"></div>
     <div class="global-view__item7" id="qso_DGnATL"></div>
-    <div class="global-view__item8" id="qso_PRVgqzp"></div>
+    <div class="global-view__item8" id="qso_CrVVQZ"></div>
     <div class="global-view__item9" id="qso_WzSnQn"></div>
   </div>
 </main>
