--- a/views/management-kpis.html
+++ b/views/management-kpis.html
@@ -2,11 +2,25 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">KPIs de Gestión</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="management-kpis">
+    <div class="management-kpis__item1" id="qso_WhymL"></div>
+    <div class="management-kpis__item2" id="qso_jnaQVub"></div>
+    <div class="management-kpis__item3" id="qso_ygsGbAJ"></div>
+    <div class="management-kpis__item4" id="qso_zRhJSmn"></div>
+
+    <div class="management-kpis__item5">
+      <div class="management-kpis__item5__header">
+        <div class="management-kpis__item5__header__left" id="qso_WUfvC"></div>
+      </div>
+      <div class="management-kpis__item5__body" id="qso_RXqJgU"></div>
+    </div>
   </div>
 </main>
