--- a/views/paid-invoices.html
+++ b/views/paid-invoices.html
@@ -2,11 +2,33 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Facturas pagadas</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="paid-invoices">
+    <div class="paid-invoices__item1" id="qso_BGcTFJ"></div>
+    <div class="paid-invoices__item2" id="qso_PFVwfG"></div>
+    <div class="paid-invoices__item3" id="qso_mxEXJd"></div>
+    <div class="paid-invoices__item4" id="qso_fSPQncS"></div>
+    <div class="paid-invoices__item5" id="qso_jyyPpC"></div>
+
+    <div class="paid-invoices__item6">
+      <div class="paid-invoices__item6__header">
+        <div class="paid-invoices__item6__header__left" id="qso_UdWFHwp"></div>
+        <div class="paid-invoices__item6__header__center" id="qso_KvmDJdK"></div>
+        <div class="paid-invoices__item6__header__right" id="qso_KAcLmG"></div>
+      </div>
+      <div class="paid-invoices__item6__body" id="qso_jPfBQA"></div>
+    </div>
+
+    <div class="paid-invoices__item7">
+      <div class="paid-invoices__item7__header"></div>
+      <div class="paid-invoices__item7__body" id="qso_jKHzr"></div>
+    </div>
   </div>
 </main>
