--- a/views/pending-invoices.html
+++ b/views/pending-invoices.html
@@ -2,11 +2,34 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Facturas pendientes</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="pending-invoices">
+    <div class="pending-invoices__item1" id="qso_FzuHPp"></div>
+    <div class="pending-invoices__item2" id="qso_zJZTjQs"></div>
+    <div class="pending-invoices__item3" id="qso_jHUvQrt"></div>
+    <div class="pending-invoices__item4" id="qso_FWpbSuS"></div>
+    <div class="pending-invoices__item5" id="qso_ejzkNE"></div>
+    <div class="pending-invoices__item6" id="qso_UxcNE"></div>
+
+    <div class="pending-invoices__item7">
+      <div class="pending-invoices__item7__header">
+        <div class="pending-invoices__item7__header__left" id="qso_kqppNR"></div>
+        <div class="pending-invoices__item7__header__center" id="qso_mMzvKme"></div>
+        <div class="pending-invoices__item7__header__right" id="qso_EePqWKJ"></div>
+      </div>
+      <div class="pending-invoices__item7__body" id="qso_rgJP"></div>
+    </div>
+
+    <div class="pending-invoices__item8">
+      <div class="pending-invoices__item8__header"></div>
+      <div class="pending-invoices__item8__body" id="qso_pPgLPz"></div>
+    </div>
   </div>
 </main>
