--- a/views/budget-table.html
+++ b/views/budget-table.html
@@ -2,11 +2,15 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle presupuesto</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="budget-table">
+    <div class="budget-table__item1" id="qso_pppgjUp"></div>
   </div>
 </main>
