--- a/views/invoicing-table.html
+++ b/views/invoicing-table.html
@@ -2,11 +2,15 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle Facturas</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="invoicing-table">
+    <div class="invoicing-table__item1" id="qso_4db49deb-0c1f-4323-a726-91f04fc13cf9"></div>
   </div>
 </main>
