--- a/views/total-invoices.html
+++ b/views/total-invoices.html
@@ -2,11 +2,34 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Todas las facturas</h1>
-    <div class="main__date" id="qso_xmYfUU"></div>
+    <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_GNPMW"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
+  </div>
+
+  <div class="total-invoices">
+    <div class="total-invoices__item1" id="qso_NxVHBVz"></div>
+    <div class="total-invoices__item2" id="qso_wVFvQ"></div>
+    <div class="total-invoices__item3" id="qso_CmmZD"></div>
+    <div class="total-invoices__item4" id="qso_eGmFU"></div>
+    <div class="total-invoices__item5" id="qso_UPYhwHn"></div>
+    <div class="total-invoices__item6" id="qso_yrGvHEw"></div>
+
+    <div class="total-invoices__item7">
+      <div class="total-invoices__item7__header">
+        <div class="total-invoices__item7__header__left" id="qso_nFmEPv"></div>
+        <div class="total-invoices__item7__header__center" id="qso_jjJNF"></div>
+        <div class="total-invoices__item7__header__right" id="qso_cZmTrFV"></div>
+      </div>
+      <div class="total-invoices__item7__body" id="qso_ysFEC"></div>
+    </div>
+
+    <div class="total-invoices__item8">
+      <div class="total-invoices__item8__header"></div>
+      <div class="total-invoices__item8__body" id="qso_wyPRjP"></div>
+    </div>
   </div>
 </main>
