--- a/views/global-view.html
+++ b/views/global-view.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="global-view">
-    <div class="global-view__item1" id="qso_JKzAa"></div>
+    <div class="global-view__item1" id="qso_WjJkAFx"></div>
     <div class="global-view__item2" id="qso_PTjgjP"></div>
     <div class="global-view__item3" id="qso_DJabg"></div>
     <div class="global-view__item4" id="qso_cjkttbD"></div>
