--- a/views/paid-invoices.html
+++ b/views/paid-invoices.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="main__row">
-    <div class="main__access-level" id="qso_GNPMW"></div>
+    <div class="main__access-level" id="qso_uycXTrY"></div>
     <div class="main__expense-type" id="qso_wnHqC"></div>
   </div>
 
