--- a/views/pending-invoices.html
+++ b/views/pending-invoices.html
@@ -2,6 +2,7 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Facturas pendientes</h1>
+	  <div class="main__log" id="qso_Vgakq"></div>
     <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
