--- a/views/budget-analysis.html
+++ b/views/budget-analysis.html
@@ -2,6 +2,7 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle presupuesto</h1>
+	  <div class="main__log" id="qso_RGTNY"></div>
     <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
