--- a/views/global-view.html
+++ b/views/global-view.html
@@ -2,12 +2,13 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Situación presupuestaria</h1>
+	  <div class="main__log" id="qso_RGTNY"></div>
     <div class="main__date" id="qso_JppdeVF"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_gdxJVV"></div>
-    <div class="main__expense-type" id="qso_wnHqC"></div>
+    <div class="main__expense-type" id="qso_wnHqC"></div>	
   </div>
 
   <div class="global-view">
@@ -21,4 +22,3 @@
     <div class="global-view__item8" id="qso_CrVVQZ"></div>
     <div class="global-view__item9" id="qso_WzSnQn"></div>
   </div>
-</main>
