Feature_added_changes_in_date_filters_and_move_elements

--- a/views/budget-analysis.html
+++ b/views/budget-analysis.html
@@ -2,8 +2,7 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle presupuesto</h1>
-	  <div class="main__log" id="qso_RGTNY"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
@@ -31,5 +30,8 @@
       </div>
       <div class="budget-analysis__item6__body" id="qso_LZjJ"></div>
     </div>
+  </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_RGTNY"></div>
   </div>
 </main>
