--- a/views/deferred-analysis.html
+++ b/views/deferred-analysis.html
@@ -2,8 +2,7 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Diferido disponible</h1>
-	  <div class="main__log" id="qso_RGTNY"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
@@ -46,5 +45,8 @@
       </div>
       <div class="deferred-analysis__item9__body" id="qso_Whky"></div>
     </div>
+  </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_RGTNY"></div>
   </div>
 </main>
