--- a/views/global-view.html
+++ b/views/global-view.html
@@ -2,8 +2,9 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Situación presupuestaria</h1>
-	  <div class="main__log" id="qso_RGTNY"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
+	
+	
   </div>
 
   <div class="main__row">
@@ -21,4 +22,8 @@
     <div class="global-view__item7" id="qso_DGnATL"></div>
     <div class="global-view__item8" id="qso_CrVVQZ"></div>
     <div class="global-view__item9" id="qso_WzSnQn"></div>
+	
+  </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_RGTNY"></div>
   </div>
