--- a/views/paid-invoices.html
+++ b/views/paid-invoices.html
@@ -2,13 +2,12 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Facturas pagadas</h1>
-	  <div class="main__log" id="qso_Vgakq"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_uycXTrY"></div>
-    <div class="main__expense-type" id="qso_wnHqC"></div>
+    <div class="main__expense-type" id="qso_VKxNh"></div>
   </div>
 
   <div class="paid-invoices">
@@ -31,5 +30,9 @@
       <div class="paid-invoices__item7__header"></div>
       <div class="paid-invoices__item7__body" id="qso_jKHzr"></div>
     </div>
+  </div>
+  <br><br><br><br>
+  <div class="main__row">
+	  <div class="main__log" id="qso_Vgakq"></div>
   </div>
 </main>
