--- a/views/pending-invoices.html
+++ b/views/pending-invoices.html
@@ -2,13 +2,12 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Facturas pendientes</h1>
-	  <div class="main__log" id="qso_Vgakq"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_uycXTrY"></div>
-    <div class="main__expense-type" id="qso_wnHqC"></div>
+    <div class="main__expense-type" id="qso_VKxNh"></div>
   </div>
 
   <div class="pending-invoices">
@@ -32,5 +31,8 @@
       <div class="pending-invoices__item8__header"></div>
       <div class="pending-invoices__item8__body" id="qso_pPgLPz"></div>
     </div>
+  </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_Vgakq"></div>
   </div>
 </main>
