--- a/css/global-styles.css
+++ b/css/global-styles.css
@@ -233,6 +233,7 @@ select {
   width: 224px;
   height: 80px;
   margin-left: auto;
+  margin-right: auto;
 }
 
 .main__date > div > article > div > div > div > div > div > div > div > div > div > div > div {
