--- a/views/budget-table.html
+++ b/views/budget-table.html
@@ -2,8 +2,7 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle presupuesto</h1>
-	  <div class="main__log" id="qso_RGTNY"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
@@ -13,5 +12,8 @@
 
   <div class="budget-table">
     <div class="budget-table__item1" id="qso_pppgjUp"></div>
+  </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_RGTNY"></div>
   </div>
 </main>
