--- a/views/invoicing-table.html
+++ b/views/invoicing-table.html
@@ -2,16 +2,19 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">Detalle Facturas</h1>
-	  <div class="main__log" id="qso_Vgakq"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_uycXTrY"></div>
-    <div class="main__expense-type" id="qso_wnHqC"></div>
+    <div class="main__expense-type" id="qso_VKxNh"></div>
   </div>
 
   <div class="invoicing-table">
     <div class="invoicing-table__item1" id="qso_4db49deb-0c1f-4323-a726-91f04fc13cf9"></div>
   </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_Vgakq"></div>
+  </div>
+  
 </main>
