--- a/views/management-kpis.html
+++ b/views/management-kpis.html
@@ -2,13 +2,12 @@
 <main class="main">
   <div class="main__row">
     <h1 class="main__title">KPIs de Gestión</h1>
-	  <div class="main__log" id="qso_Vgakq"></div>
-    <div class="main__date" id="qso_JppdeVF"></div>
+    <div class="main__date" id="qso_fSdpA"></div>
   </div>
 
   <div class="main__row">
     <div class="main__access-level" id="qso_uycXTrY"></div>
-    <div class="main__expense-type" id="qso_wnHqC"></div>
+    <div class="main__expense-type" id="qso_VKxNh"></div>
   </div>
 
   <div class="management-kpis">
@@ -23,5 +22,8 @@
       </div>
       <div class="management-kpis__item5__body" id="qso_RXqJgU"></div>
     </div>
+  </div>
+  <div class="main__row">
+	  <div class="main__log" id="qso_Vgakq"></div>
   </div>
 </main>
